--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <section class="logo">
-    <svg class="letters" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="-30 100 600 600" xml:space="preserve">
+    <svg class="letters" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="-30 100 600 600" xml:space="preserve"> <!-- viewBox="-30 100 600 600"  -->
 
       <g>
         <g>
@@ -28,9 +28,9 @@
       </g>
     </svg>
 
-    <svg class="timer" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600" xml:space="preserve">
+    <svg class="timer" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve">
 
-      <circle r="25%" cx="50%" cy="50%" />
+      <circle r="16" cx="16" cy="16" />
     </svg>
   </section>
 </body>
